--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 		<tr>
 			<td>
 				<table border="1" width="100%">
-					<tr ><th colspan="2">Nested Table 2</th</tr>
+					<tr ><th colspan="2">Nested Table 2</th></tr>
 					<tr>
 						<th>Coloum 1</th>
 						<th>Coloum 2</th>
@@ -25,7 +25,7 @@
 			</td>
 			<td>
 				<table border="1" width="100%">
-					<tr><th>Nested Table 1</th</tr>
+					<tr><th>Nested Table 1</th></tr>
 					<tr><td>
 						<ul>
 							<li>List item</li>
@@ -39,16 +39,16 @@
 		<tr>
 			<td>
 				<table border="1" width="100%">
-					<tr><th colspan="2">Nested Table 3</th</tr>
+					<tr><th colspan="2">Nested Table 3</th></tr>
 					<tr>
-						<td><a href="#" alt="table">Nested Table</a</td>
+						<td><a href="#" alt="table">Nested Table</a></td>
 						<td>Demo Continued</td>
 					</tr>
 				</table>
 			</td>
 			<td>
 				<table border="1" width="100%">
-					<tr><th>Nested Table 4</th</tr>
+					<tr><th>Nested Table 4</th></tr>
 					<tr><td style="background-color :black; color:white;">HTML</td></tr>
 				</table>
 			</td>
