--- a/main.html
+++ b/main.html
@@ -14,8 +14,8 @@
 				<table border="1" width="100%">
 					<tr><th colspan="2">Nested Table 2</th></tr>
 					<tr>
-						<th>Coloum 1</th>
-						<th>Coloum 2</th>
+						<th>Column 1</th>
+						<th>Column 2</th>
 					</tr>
 					<tr>
 						<td>abc</td>
